add block with css

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@ html, body{
 body{
     display: flex;
     align-items: center;
-    justify-self: center;
+    justify-content: center;
     flex-direction: column;
+}
+.wrapper {
+    padding: 30px;
+    border: 1px solid gray;
 }
