update Lesson 6 Homework 3

--- a/CSS/Lesson6/css/homework3_2.css
+++ b/CSS/Lesson6/css/homework3_2.css
@@ -4,6 +4,7 @@
 
 html, body {
     margin:0;
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 .background {
@@ -19,61 +20,64 @@ html, body {
     background-color: #f5f5f5;
     width: 406px;
     height: 414px;
-    padding:15px;
+    padding-left: 20px;
+    padding-right: 20px;
     margin: 5px;
 }
 
-h3{
+h4{
     padding-left: 0%;
-    margin: 5px;
+    padding-top: 10px;
+    margin-bottom: 10px;
 }
 
 .rowblue{
     background-color:#a5ccda;
     height: 30px;
-    padding:4px; 
-    font-size: small;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    font-size:small;
+    padding-top: 7px;          
+    padding-bottom: 8px;
+    padding-left: 15px;   
 }
 
 .rowgrey{
     background-color:#e2e2e2;
     height: 30px;
-    padding:4px; 
     font-size: small;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 7px;
+    padding-bottom: 8px;
+    padding-left: 15px;
 }
 
 .rowlightblue{
     background-color:#add8e6;
     height: 30px;
-    padding:4px; 
     font-size: small;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 7px;
+    padding-bottom: 8px;
+    padding-left: 15px;
 }
 
 .checkbox{
-    
     color: rgb(0, 0, 0);
     line-height: 100%;
-    padding:5px;
+    padding-left:10px;
 }
 
 .task{
-    
-    padding:5px;
+    padding-left:10px;
+    font-size: smaller;
 }
 
 .marks{
     color:#8c0f06;
-    padding:5px;
+    padding-left:15px;
+    font-size: xx-small;
 }
 
+/*
 input[type="checkbox"]{
   accent-color: transparent;
   width: 10px;
   height:10px;
-}
+}*/
