--- a/CSS/Lesson6/css/homework3_3.css
+++ b/CSS/Lesson6/css/homework3_3.css
@@ -1,8 +1,46 @@
+*{
+    box-sizing: border-box;
+}
 
-        .div-back{
-            background-color: #f5f5f5;
-            padding: 20px;
-            width: 400px;
-        }
-        /*      li {
-         list-style-type: none; /* маркеры отсутствуют */
+html, body {
+    margin:0;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size:smaller;
+    font-weight: 100;
+}
+
+html, body {
+    margin:0;
+}
+
+.background {
+    background-color: white;
+    color:rgb(0, 0, 0);
+    width: 100%;
+    height: auto;
+    padding: 5px;
+    margin: 5px;
+}
+
+.background2{
+    background-color: #f5f5f5;
+    width: 658px;
+    height: 402px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin: 5px;
+}
+
+h3{
+    padding-top: 40px;
+}
+
+h4{
+    padding-left: 0%;
+    font-weight: 100;
+}
+
+li strong{
+    font-weight:bold;
+    color:rgb(77, 77, 77);
+}
