--- a/CSS/Lesson10/dropDownMenu.css
+++ b/CSS/Lesson10/dropDownMenu.css
@@ -1,21 +1,3 @@
-*{
-    box-sizing: border-box;
-}
-
-html, body{
-    margin: 0;
-    padding: 0;
-}
-
-ul, ol{
-    list-style: none;
-    padding: 0;
-    margin: 0;   
-}
-
-a{
-    text-decoration: none;
-}
 
 .container{
     width: 960px;
@@ -24,31 +6,40 @@ a{
 
 h1{
     text-align: center;
-    font-size: 14px;
+    font-size: 20px;
+    padding-top: 5px;
+    padding-bottom: 40px;
+    color:#474747;
 }
 
 nav{
-    background-color: black;
-    border-radius: 4px;
+    background-color: #111;
+    border: 1px solid #222;
+    border-radius: 6px;
+    background-image: linear-gradient(#444, #111);     /*Add some style*/
+    box-shadow: 0 1px 1px #777, 0 1px 0 #666 inset;    /*Add some style*/
 }
 
-nav ul ul{
+nav ul ul {
     display: none;
+    visibility: hidden;   /* All submenu items are hidden without hovering */
 }
 
 nav > ul > li {
     display: inline-block;
-    margin-right: -4px;
+    margin-right: -4px;     
 }
 
 nav > ul > li > a{
     text-transform: uppercase;
     display: block;
-    padding: 13px 25px;
-    border-right: 1px solid #bebebe;
-    font-size: 14px;
-    font-weight: 600;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding: 11px 30px;
+    border-right: 1px solid #747474;
+    color: #999;
+    font-size: 12px;
+    font-weight:bold;
+    font-family:Arial, Helvetica, sans-serif;
+    text-shadow: 0 1px 0 #000;                  /*Add some style*/
 }
 
 nav > ul > li > a:hover{
@@ -56,69 +47,173 @@ nav > ul > li > a:hover{
 }
 
 nav a {
-    color:#bebebe;
+    color:#474747;
 }
 
 nav li{
     position: relative;
 }
 
-nav li.subMenu:hover > ul{
+nav li.subMenu:hover > ul {
+    display: block;
+    visibility: visible;
+}
+
+nav ul.subMenu2 > li{
+    display: none;
+}
+
+nav ul.subMenu2:hover > li{
     display: block;
 }
 
 nav li.subMenu ul{
     position: absolute;
-    background-color: rgb(31, 31, 31) ;
+    background-image: linear-gradient(#444, #111);  /*Add some style*/
     width: calc(100% + 20px);
-    border: 1px solid #bebebe;
+    border: 1px solid #3d3d3d;
+    -moz-border-radius: 5px;                  /* box-shadow for different browsers*/
+    -webkit-border-radius: 5px;               /* box-shadow for different browsers*/
+    border-radius: 5px;
 }
 
-nav li.subMenu ul a{
+nav li.subMenu ul a {
     display: block;
     padding: 9px 15px;
-    border-bottom: 1px solid #bebebe;
+    border: 1px solid #3d3d3d;
+    -moz-box-shadow: 0 1px 0 #111, 0 2px 0 #666;            
+    -webkit-box-shadow: 0 1px 0 #111, 0 2px 0 #666;
+    box-shadow: 0 1px 0 #111, 0 2px 0 #666;
 }
 
-nav li.subMenu ul li:hover > a{
-    background-color: blue;
+nav li.subMenu ul:first-child a {
+    -moz-border-radius: 5px 5px 0 0;
+    -webkit-border-radius: 5px 5px 0 0;
+    border-radius: 5px 5px 0 0;
+}
+
+nav li.subMenu ul li > a {
+    background-color: transparent;
+    color: #999;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    font-weight:bold;
+    border: 1px solid #3d3d3d;
+    -moz-box-shadow: 0 1px 0 #111, 0 2px 0 #666;
+    -webkit-box-shadow: 0 1px 0 #111, 0 2px 0 #666;
+    box-shadow: 0 1px 0 #111, 0 2px 0 #666;                /*Add some style*/
+}
+
+nav li.subMenu ul li > a:hover {
+    background-color: #0186ba;
     color: white;
+    border: 1px solid #0186ba;
 }
 
-nav li.subMenu ul li a:hover .triangle-left{
-    border-right: 6px solid blue !important;
+nav li.subMenu ul li:first-child > a {
+    -moz-border-radius: 5px 5px 0 0;
+    -webkit-border-radius: 5px 5px 0 0;
+    border-radius: 5px 5px 0 0;
 }
 
-nav li.subMenu > ul li:hover ul{
-    display: block;  /*при наведении внутренние списки показываются*/
+nav li.subMenu ul li:last-child > a {
+    -moz-border-radius: 0 0 5px 5px;
+    -webkit-border-radius: 0 0 5px 5px;
+    border-radius: 0 0 5px 5px;
+}
+
+nav li.subMenu ul li:hover > ul{
+    visibility: visible; 
+    display: block;                 /*internal lists are shown when hovering*/
     left: 100%;
     top:0;
 }
 
-.triangle::after{
+/*triangles in the drop-down menu*/
+.triangle::after {
     display: block;
     content: ' ';
     width:12px;
     height:12px;
     border-left: 6px solid transparent;
     border-right: 6px solid transparent;
-    border-bottom: 6px solid blue;
+    border-bottom: 6px solid #3d3d3d;
     position: absolute;
-    top:calc(50%-6px);
+    top:-12px;
     left:20px;
     box-sizing: border-box;
 }
 
-.triangle-left::before{
+.triangle:hover::after {
+    display: block;
+    content: ' ';
+    width:12px;
+    height:12px;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-bottom: 6px solid #0186ba;
+    position: absolute;
+    top:-12px;
+    left:20px;
+    box-sizing: border-box;
+}
+
+.triangle-left::before {
     display: block;
     content: ' ';
     width:12px;
     height:12px;
     border-top: 6px solid transparent;
-    border-bottom: 6px solid blue;
-    border-right: 6px solid transparent;
+    border-right: 6px solid  #3d3d3d;
+    border-bottom: 6px solid transparent;
     position: absolute;
-    top:calc(50%-6px);
-    left:20px;
+    top:12px;
+    left:-12px;
+    box-sizing: border-box;
+    z-index: 110;
+}
+
+
+/*inverted triangles in the drop-down menu*/
+.triangle-left a::before {
+    display: block;
+    content: ' ';
+    width:12px;
+    height:12px;
+    border-top: 6px solid transparent;
+    border-right: 6px solid  #3d3d3d;
+    border-bottom: 6px solid transparent;
+    position: absolute;
+    top:12px;
+    left:-12px;
+    box-sizing: border-box;
+    z-index: 110;
+}
+
+.triangle-left:hover::before {
+    display: block;
+    content: ' ';
+    width:12px;
+    height:12px;
+    border-top: 6px solid transparent;
+    border-right: 6px solid  #0186ba;
+    border-bottom: 6px solid transparent;
+    position: absolute;
+    top:12px;
+    left:-12px;
+    box-sizing: border-box;
+}
+
+.triangle-left a:hover::before {
+    display: block;
+    content: ' ';
+    width:12px;
+    height:12px;
+    border-top: 6px solid transparent;
+    border-right: 6px solid  #0186ba;
+    border-bottom: 6px solid transparent;
+    position: absolute;
+    top:12px;
+    left:-12px;
     box-sizing: border-box;
 }
