--- a/CSS/Lesson10/pz3_2_modal window.css
+++ b/CSS/Lesson10/pz3_2_modal window.css
@@ -74,7 +74,7 @@ h1 {
 .modal-wrapper {
     visibility: hidden;
     pointer-events: none;
-    width: 1134px;
+    width: 100%;
     height: 947px;
     position: fixed;
     top: 0;
