--- a/CSS/Lesson14_flex/flex.css
+++ b/CSS/Lesson14_flex/flex.css
@@ -1,153 +1,62 @@
-/*html, body{
+html,
+body {
     height: 100%;
 }
 
-.container{
+.container {
     width: 960px;
     height: 100%;
     margin: 0 auto;
     display: flex;
-    flex-direction: row;  /*Направление основной оси флекс-контейнера*/
-    /*flex-direction: row-reverse; /*Оновная справа-налево. Направление наоборот*/
-    /*flex-direction: column; /*Дополнительная ось меняется на вертикальную.*/
-    /*flex-direction: column-reverse; /*Оновная снизу-вверх. Отображение с конца основной оси*/
-    /*justify-content: flex-start; /*Элементы вначале распологаются*/
+
+    /*Направление основной оси флекс-контейнера*/
+    flex-direction: row;}
+
+    /*Оновная справа-налево. Направление наоборот*/
+    /*flex-direction: row-reverse; 
+
+    /*Дополнительная ось меняется на вертикальную.*/
+    /*flex-direction: column;
+   
+    /*Оновная снизу-вверх. Отображение с конца основной оси*/
+    /*flex-direction: column-reverse;
+
+    /*Элементы вначале располагаются*/
+    /*justify-content: flex-start; 
+
     /*justify-content: flex-end;*/
     /*justify-content: center;
     /*justify-content: space-between;
-    /*justify-content: space-around;  /*половина расстояния справа и слева от флекс-контайнера*/
+
+    /*Половина расстояния справа и слева от флекс-контайнера*/
+    /*justify-content: space-around;  
     /*justify-content: center;
-    align-items:center; /*выравнивание по поперечной оси*/
+
+    /*Выравнивание по поперечной оси*/
+    /*align-items:center;
     /*align-content: center; 
-    /*gap: 15px; /*расстояние вокруг элементов*/
-/*}
 
-/*.container div{
+    /*Расстояние вокруг элементов*/
+    /*gap: 15px; */
+
+
+.container div {
     padding: 30px;
-    border:1px solid black;
-}*/
+    border: 1px solid black;
+}
 
-.first{
+.first {
     background-color: rgb(206, 253, 135);
 }
 
-.second{
-  background-color: rgb(255, 255, 119) ;
+.second {
+    background-color: rgb(255, 255, 119);
 }
 
-.third{
- background-color: rgb(255, 131, 131);
+.third {
+    background-color: rgb(255, 131, 131);
 }
 
-nav ul{
+nav ul {
     display: flex;
-}
-
-/*Flex-form*/
-
-html, body{
-    height: 100%;
-}
-
-body{
-display: flex;
-justify-content: center;
-align-items: center;
-}
-
-.form{
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.form img{
-    width: 60px;
-}
-
-.form p{
-  color:grey;
-
-}
-
-.form input{
-    border-radius: 0;
-    border: 1px solid #ccc;
-    position: relative;
-}
-
-.form input:focus{
-    border-radius: 0;
-    outline: 0;
-    border-color: lightblue;
-
-}
-
-/*.form input [type="email"]:focus + input{
-    border-top:1px solid transparent;
-}*/
-
-.form input[type="email"]{
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    height: 45px;
-    padding: 10px;
-}
-
-.form input[type="email"]:focus{
-    z-index: 1;
-}
-
-.form input[type="password"]{
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    height: 45px;
-    padding: 10px;
-    margin-top: -2px;
-    width: 100%;
-}
-
-#registration_form{
-    width: 320px;
-    height: 320px;
-    margin: 20px auto;
-    padding: 15px;
-    background-color: #ffffff;
-    border-color: #ccc;
-}
-
-input{
-    width: 100%;
-    height: 35px;
-
-    margin: 10px  auto;
-    font-size: 14px;
-    padding-left: 10px;
-}
-
-input [for^="checkbox"]{
-    width:10px;
-    height: 10px;
-}
-.checkbox{
-    padding-top: 20px;
-    padding-bottom: 10px;
-    display: flex;
-    align-items: center;
-}
-
-.form button{
-    width: 100%;
-    height: 40px;
-    border: none;
-    background-color:#1155bc ;
-    color:#ffffff;
-    font-size: 1rem;
-    border-radius: 5px;
-}
-
-.button:hover{
-  background-color:#0f3b7e ;
-  cursor: pointer;
 }
