add pz_2block Lesson 12

--- a/CSS/Lesson14_flex/flex.css
+++ b/CSS/Lesson14_flex/flex.css
@@ -10,7 +10,8 @@ body {
     display: flex;
 
     /*Направление основной оси флекс-контейнера*/
-    flex-direction: row;}
+    flex-direction: row;
+}
 
     /*Оновная справа-налево. Направление наоборот*/
     /*flex-direction: row-reverse; 
